--- a/FinDesk2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FinDesk2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
         </li>
                     *@
                     <li>
-                        <a asp-action="Index" asp-controller="BaseIssues" asp-area="Admin"><i class="fa fa-edit "></i>Список запросов</a>
+                        <a asp-action="Index" asp-controller="BaseIssues" asp-area="Admin"><i class="fa fa-edit "></i>Список Инцидентов</a>
                     </li>
                     @*<li class="active-link">
             <a href="ui.html"><i class="fa fa-table "></i>UI Elements  <span class="badge">Included</span></a>
@@ -89,9 +89,9 @@
     </div>
     <div class="footer">
         <div class="row">
-            <div class="col-lg-12">
+            @*<div class="col-lg-12">
                 &copy;  2014 webstore.com | Design by: <a href="http://binarytheme.com" style="color:#fff;" target="_blank">www.binarytheme.com</a>
-            </div>
+            </div>*@
         </div>
     </div>
     <!-- /. WRAPPER  -->
