--- a/FinDesk2/Views/Issue/Edit.cshtml
+++ b/FinDesk2/Views/Issue/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IssueViewModel
 
 @{
-    ViewData["Title"] = "Редактирование Запроса: " + Model.Id;
+    ViewData["Title"] = "Редактирование Инцидента: " + Model.Id;
 }
 
     <div class="container">
