--- a/FinDesk2/Areas/Admin/Views/BaseIssues/Edit.cshtml
+++ b/FinDesk2/Areas/Admin/Views/BaseIssues/Edit.cshtml
@@ -1,8 +1,76 @@
 ﻿@model BaseIssue
 
 @{
-    ViewData["Title"] = "Редактирование" + Model.Id;
+    ViewData["Title"] = "Редактирование Инцидента №: " + Model.Id;
 }
 
-<h2>Edit</h2>
+<div class="container">
+    <h3>@ViewData["Title"]</h3>
+    @*@using (Html.BeginForm("Edit", "Employees", FormMethod.Post))
+        {
+        }*@
 
+    @*<form asp-action="Edit" asp-route-Id="@Model.Id">*@
+    <form asp-action="Edit" method="Post">
+        <div class="row">
+            <div class="col-md-4">
+
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input asp-for="Id" type="hidden" />
+
+                <div class="form-group">
+                    <label asp-for="User"></label>
+                    <input asp-for="User" class="form-control" readonly />
+                    <span asp-validation-for="User" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IssueTypeId"></label>
+                    @*<input asp-for="IssueTypeId" class="form-control" readonly />*@
+                    <select class="form-control" asp-for="IssueTypeId" asp-items="ViewBag.IssueTypesSL"></select>
+                    <span asp-validation-for="IssueTypeId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IssueTS"></label>
+                    <input asp-for="IssueTS" class="form-control" readonly />
+                    <span asp-validation-for="IssueTS" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CategoryId"></label>
+                    @*<input asp-for="CategoryId" class="form-control" readonly />*@
+                    <select class="form-control" asp-for="CategoryId" asp-items="ViewBag.IssueGategoriesSL"></select>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LongDescr"></label>
+                    <input asp-for="LongDescr" class="form-control" />
+                    <span asp-validation-for="LongDescr" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IssueStatusId"></label>
+                    <select class="form-control" asp-for="IssueStatusId" asp-items="ViewBag.IssueStatusesSL"></select>
+                    <span asp-validation-for="IssueStatusId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SolveTS"></label>
+                    <input asp-for="SolveTS" class="form-control" />
+                    <span asp-validation-for="SolveTS" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SolveDescr"></label>
+                    <input asp-for="SolveDescr" class="form-control" />
+                    <span asp-validation-for="SolveDescr" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SolveUser"></label>
+                    <input asp-for="SolveUser" class="form-control" />
+                    <span asp-validation-for="SolveUser" class="text-danger"></span>
+                </div>
+                <div>
+                    <input type="submit" value="Сохранить" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+
+    </form>
+
+</div>
