--- a/FinDesk2/Areas/Admin/Views/Home/Index.cshtml
+++ b/FinDesk2/Areas/Admin/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     </div>
 </div>*@
 <!-- /. ROW  -->
-<div class="row text-center pad-top">
+@*<div class="row text-center pad-top">
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
         <div class="div-square">
             <a href="#">
@@ -74,5 +74,5 @@
         </div>
 
 
-    </div>
+    </div>*@
 </div>
