--- a/FinDesk2/Views/SimpleIssue/Delete.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Delete.cshtml
@@ -25,6 +25,12 @@
                 @Html.DisplayFor(model => model.User)
             </dd>
             <dt>
+                @Html.DisplayNameFor(model => model.IssueType)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IssueType)
+            </dd>
+            <dt>
                 @Html.DisplayNameFor(model => model.LongDescr)
             </dt>
             <dd>
