--- a/FinDesk2/Views/SimpleIssue/Create.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Create.cshtml
@@ -22,18 +22,29 @@
                     <span asp-validation-for="User" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="LongDescr" class="control-label"></label>
-                    <input asp-for="LongDescr" class="form-control" />
-                    <span asp-validation-for="LongDescr" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    @*<label asp-for="SolveDescr" class="control-label"></label>*@
-                    <input asp-for="SolveDescr" type="hidden" class="form-control" />
-                    @*<span asp-validation-for="SolveDescr" class="text-danger"></span>*@
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
+                    <label asp-for="IssueType" class="control-label"></label>
+                    @*<input asp-for="IssueType" class="form-control" />*@
+                    <select asp-for="IssueType" class="form-control">
+                        <option value="Bug">Bug (проблема)</option>
+                        <option value="Task">Task (Задача)</option>
+                        <option value="Change">Change (Изменение)</option>
+                        <option value="Project">Project (Проект)</option>
+                    </select>
+                    <span asp-validation-for="IssueType" class="text-danger"></span>
+                 </div>
+                    <div class="form-group">
+                        <label asp-for="LongDescr" class="control-label"></label>
+                        <input asp-for="LongDescr" class="form-control" />
+                        <span asp-validation-for="LongDescr" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @*<label asp-for="SolveDescr" class="control-label"></label>*@
+                        <input asp-for="SolveDescr" type="hidden" class="form-control" />
+                        @*<span asp-validation-for="SolveDescr" class="text-danger"></span>*@
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-default" />
+                    </div>
             </form>
         </div>
     </div>
