--- a/FinDesk2/Views/SimpleIssue/Details.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Details.cshtml
@@ -8,8 +8,9 @@
 
 <div class="container">
     <h3>Задача №@Model.Id</h3>
-    <p>Описание: @Model.LongDescr</p>
     <p>Пользователь: @Model.User</p>
+    <p>ТипИнцидента: @Model.IssueType</p>
+    <p>Описание: @Model.LongDescr</p>
 </div>
 <a asp-controller="SimpleIssue" asp-action="Index">Запросы</a>
 
