--- a/FinDesk2/Views/SimpleIssue/Edit.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Edit.cshtml
@@ -24,6 +24,18 @@
                     <span asp-validation-for="User" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="IssueType"></label>
+                    @*<input asp-for="Status" class="form-control" />*@
+                <select asp-for="IssueType" class="form-control">
+                    <option value="Bug">Bug (проблема)</option>
+                    <option value="Task">Task (Задача)</option>
+                    <option value="Change">Change (Изменение)</option>
+                    <option value="Project">Project (Проект)</option>
+                </select>
+                    <span asp-validation-for="IssueType" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
                     <label asp-for="LongDescr"></label>
                     <input asp-for="LongDescr" class="form-control" />
                     <span asp-validation-for="LongDescr" class="text-danger"></span>
