--- a/FinDesk2/Views/SimpleIssue/Edit.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Edit.cshtml
@@ -24,21 +24,31 @@
                     <span asp-validation-for="User" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="IssueTS"></label>
+                    <input asp-for="IssueTS" class="form-control" readonly />
+                    <span asp-validation-for="IssueTS" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="IssueType"></label>
-                    @*<input asp-for="Status" class="form-control" />*@
-                <select asp-for="IssueType" class="form-control">
-                    <option value="Bug">Bug (проблема)</option>
-                    <option value="Task">Task (Задача)</option>
-                    <option value="Change">Change (Изменение)</option>
-                    <option value="Project">Project (Проект)</option>
-                </select>
+                    @*<input asp-for="IssueTypeId" class="form-control" readonly />*@
+                    <select class="form-control" asp-for="IssueType" asp-items="ViewBag.IssueTypesSL"></select>
                     <span asp-validation-for="IssueType" class="text-danger"></span>
                 </div>
-
+                <div class="form-group">
+                    <label asp-for="Category"></label>
+                    @*<input asp-for="CategoryId" class="form-control" readonly />*@
+                    <select class="form-control" asp-for="Category" asp-items="ViewBag.IssueGategoriesSL"></select>
+                    <span asp-validation-for="Category" class="text-danger"></span>
+                </div>
                 <div class="form-group">
                     <label asp-for="LongDescr"></label>
                     <input asp-for="LongDescr" class="form-control" />
                     <span asp-validation-for="LongDescr" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="IssueStatus"></label>
+                    <select class="form-control" asp-for="IssueStatus" asp-items="ViewBag.IssueStatusesSL"></select>
+                    <span asp-validation-for="IssueStatus" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="SolveDescr"></label>
