--- a/FinDesk2/Views/_ViewImports.cshtml
+++ b/FinDesk2/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using FinDesk2.Models
 @using FinDesk2.ViewModels
 @using FinDesk2.ViewModels.Identity
+@using FinDesk2.Infrastructure.Others
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, FinDesk2
