--- a/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -22,6 +22,7 @@
 
         @*<li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>*@
         <li><a asp-controller="SimpleIssue" asp-action="Index">Запросы</a></li>
+        <li><a asp-controller="SimpleIssue" asp-action="Create">Новый Запрос</a></li>
         @if (User.IsInRole(FinDesk.Domain.Identity.Role.Administrator))
         {
             <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">Админка<i class="fa fa-key"></i></a></li>
