--- a/FinDesk2/Views/Account/Register.cshtml
+++ b/FinDesk2/Views/Account/Register.cshtml
@@ -17,6 +17,9 @@
                         <input asp-for="UserName" placeholder="Имя пользователя" />
                         <span asp-validation-for="UserName" class="text-danger"></span>
 
+                        <input asp-for="Email" placeholder="Корпоративная почта" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+
                         <input asp-for="Password" placeholder="Пароль" />
                         <span asp-validation-for="Password" class="text-danger"></span>
 
