Реализован Интерфейс IIssueMail и функционал отправки сообщений

--- a/FinDesk2/Views/SimpleIssue/Index.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Index.cshtml
@@ -70,7 +70,7 @@
     <style>
         #st_issue_table {
             width: auto;
-            background: BlanchedAlmond;
+            background: Bisque;
         }
     </style>
 }
