1. Изменение во Views (поле описание Запроса изменено на textarea вместо input) 2. Исправлена ошибка в поверке существования учётной записи Admin при инициализации БД

--- a/FinDesk2/Views/SimpleIssue/Create.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Create.cshtml
@@ -48,7 +48,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="LongDescr" class="control-label"></label>
-                    <input asp-for="LongDescr" class="form-control" />
+                    <textarea asp-for="LongDescr" class="form-control"></textarea>
                     <span asp-validation-for="LongDescr" class="text-danger"></span>
                 </div>
                 <div class="form-group">
