--- a/FinDesk2/Views/SimpleIssue/Edit.cshtml
+++ b/FinDesk2/Views/SimpleIssue/Edit.cshtml
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="LongDescr"></label>
-                    <input asp-for="LongDescr" class="form-control" />
+                    <textarea asp-for="LongDescr" class="form-control"></textarea>
                     <span asp-validation-for="LongDescr" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="SolveDescr"></label>
-                    <input asp-for="SolveDescr" class="form-control" />
+                    <textarea asp-for="SolveDescr" class="form-control"></textarea>
                     <span asp-validation-for="SolveDescr" class="text-danger"></span>
                 </div>
                 <div>
