--- a/FinDesk2/Views/Account/Register.cshtml
+++ b/FinDesk2/Views/Account/Register.cshtml
@@ -17,7 +17,7 @@
                         <input asp-for="UserName" placeholder="Имя пользователя" />
                         <span asp-validation-for="UserName" class="text-danger"></span>
 
-                        <input asp-for="Email" placeholder="Корпоративная почта" />
+                        <input asp-for="Email" type="email" placeholder="Корпоративная почта" />
                         <span asp-validation-for="Email" class="text-danger"></span>
 
                         <input asp-for="Password" placeholder="Пароль" />
